# progensys

./: .gitignore  README.md  flask_app.py  project_structure.md  pyproject.toml  text_tools.py
blueprints/admin_tools/: __init__.py
blueprints/autocompletion/: __init__.py
blueprints/courses/: __init__.py
blueprints/exposures/: __init__.py
blueprints/finals/: __init__.py
blueprints/grading/: __init__.py
blueprints/learner_dashboard/: __init__.py
blueprints/migration_tools/: __init__.py
blueprints/models/: __init__.py
blueprints/problem_set/: __init__.py
blueprints/problems/: __init__.py
misc_files/: gentests.py  groups.tex  history.txt  student_ids.txt
notebooks/: ncd.ipynb  ncd2.ipynb  overleaf_tools.ipynb  sharelatex_tools.ipynb
problems/: loaders.py  problems_db.tex
scheduled-tasks/: load_stepik_solved_tasks.py
sqldumps/: dump0306.sql  dump0310.sql  dump0417.sql
static/: latex_check.html  mathjax_config.js  miserables.json  vivagraph.html
static/css/: main.css  (+1 more)
templates/: base.html  corrections.html  final_grades.html  landing.html  login.html  multiple_problems.html  multiple_problems_source.html  multiple_problems_verbose.html  problem_stats.html  result_table_snippet.html  review_requests_list.html  single_problem.html  single_problem_edit.html  student_test_results.html  student_trajectory.html  test_printout.html  trajectory.html  user_list.html  view_all_comments.html  view_available_courses.html  view_course.html  view_edit_results.html  view_grading_results.html  view_problems.html  view_trajectory.html  view_users.html
(+33 files in other folders)
