[project]
name = "progensys"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-login",
    "flask-mail",
    "flask-sqlalchemy",
    "flask_api",
    "pulp"
]

[tool.ruff]
line-length = 120
exclude = [
    '.git',
    '__pycache__',
    'ens','rf','svm','dnn'
]